enable-preview for amber simplifications when running
(cherry picked from commit eb0fbbb67443eef0e541bc15da1fe3858c3bd4e3)