@@ -3,4 +3,4 @@ cls
 chcp 65001 > nul:
 
 @echo on
-java --enable-native-access=ALL-UNNAMED -jar notepadmisuse-1.0-SNAPSHOT.jar
+java --enable-preview --enable-native-access=ALL-UNNAMED -jar notepadmisuse-1.0-SNAPSHOT.jar
